tests/good/typing/051-psum-at.clap
val f = case { A at { A } => 42 }

