tests/bad/lexical/058-case-5.clap
val x = 
  case { u at { U } => 42 }
 
